# mcconverge

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/mcconverge/: __init__.py  plotting.py  simulator.py  variables.py
tests/: test_mcconverge.py
